Send interview's invitaions
