# server/validation/jobListingValidations.js
@@ -21,11 +21,7 @@ const postCreateListing = [
       }
     }),
   body('questions').custom((value) => {
-    console.log(Array.isArray(value));
     if (!Array.isArray(value)) {
-      // const obj = value;
-      // value = [];
-      // value.push(obj);
       const err = new Error('Questions must be an array');
       throw err;
     }
@@ -50,18 +46,68 @@ const postCreateListing = [
         question.keywords = [question.keywords];
       }
       for (const keyword of question.keywords) {
-        console.log(keyword.length);
         if (keyword.length === 0) {
           const err = new Error('Keywords length must be > 0.');
           throw err;
         }
       }
     }
-    console.log(value);
+    return true;
+  }),
+];
+
+const postInvite = [
+  body('listingId', 'Listing id is not correct.').custom((value) => {
+    if (value.length !== 36) {
+      return false;
+    }
+    return true;
+  }),
+  body('candidates').custom((value) => {
+    if (!Array.isArray(value)) {
+      const err = new Error('Candidates must be an array');
+      throw err;
+    }
+    if (value.length === 0) {
+      const err = new Error('Candidates array can not be empty');
+      throw err;
+    }
+    for (let candidate of value) {
+      if (candidate.name.length === 0) {
+        const err = new Error("Candidate's name length must be > 0.");
+        throw err;
+      }
+      if (candidate.email.length === 0) {
+        const err = new Error("Candidate's email length must be > 0.");
+        throw err;
+      }
+      if (candidate.phoneCode.length < 2 || candidate.phoneCode.length > 5) {
+        const err = new Error(
+          "Candidate's phoneCode should be between 2 and 5 characters length."
+        );
+        throw err;
+      }
+      const phoneNumber = candidate.phoneNumber.toString();
+      if (phoneNumber.length < 7 || phoneNumber.length > 15) {
+        const err = new Error(
+          "Candidate's phoneNumber should be between 7 and 15 characters length."
+        );
+        throw err;
+      }
+      for (let num of phoneNumber) {
+        if (num < '0' || num > '9') {
+          const err = new Error(
+            "Candidate's phoneNumber should contain numbers only."
+          );
+          throw err;
+        }
+      }
+    }
     return true;
   }),
 ];
 
 module.exports = {
   postCreateListing,
+  postInvite,
 };
